--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -1705,6 +1705,7 @@ section.collapse > .heading {
 
 .collapse-block > .disclosure-button .part.top .label {
     padding: 0 0 0 1.25em;
+	margin-right: 1.5em;
 }
 
 /*  Bottom part of disclosure button.
@@ -1742,6 +1743,21 @@ section.collapse > .heading {
 }
 .collapse-block.no-abstract.expanded-not > .disclosure-button .part.bottom > span {
     display: none;
+}
+
+/*	Iceberg indicators.
+ */
+.collapse-block > .disclosure-button > .collapse-iceberg-indicator {
+	--indicator-size: calc(0.5 * var(--collapse-toggle-top-icon-size));
+	
+	position: absolute;
+	right: 1.75em;
+	font-size: var(--indicator-size);
+	top: calc(0.5 * (var(--collapse-toggle-top-icon-size) - var(--indicator-size)));
+}
+.collapse-block > .disclosure-button > .collapse-iceberg-indicator .inline-icon {
+	top: 0;
+	background-color: transparent;
 }
 
 /*  Inline disclosure button.
@@ -1800,6 +1816,19 @@ section.collapse > .heading {
 .collapse-inline.expanded-not.just-clicked > .collapse-content-outer-wrapper > .disclosure-button.end:hover .icon svg:nth-last-of-type(2) {
     transform: none;
     transition: none;
+}
+
+/*	Iceberg indicators in inline collapses.
+ */
+.collapse-inline > .collapse-content-outer-wrapper > .disclosure-button .collapse-iceberg-indicator {
+	font-size: 1.25em;
+	position: relative;
+}
+.collapse-inline > .collapse-content-outer-wrapper > .disclosure-button .collapse-iceberg-indicator .inline-icon {
+	top: 0;
+}
+.collapse-inline.expanded > .collapse-content-outer-wrapper > .disclosure-button .collapse-iceberg-indicator {
+	display: none;
 }
 
 /*****************************/
@@ -1897,7 +1926,7 @@ section.collapse > .heading {
     min-height: var(--collapse-toggle-top-height);
     margin-left: calc(-1 * var(--collapse-toggle-left-width));
     margin-bottom: 0;
-    padding: 0.25em 2.5em 0 0;
+    padding: 0.25em 3em 0 0;
     text-align: left;
     border: none;
     box-sizing: border-box;
@@ -2086,6 +2115,10 @@ blockquote .collapse-block.no-abstract.expanded-not > .disclosure-button .part::
     --collapse-toggle-bottom-height: calc(2.25 * var(--base-font-size));
 }
 
+.collapse.aux-links-append > .disclosure-button > .collapse-iceberg-indicator {
+	display: none;
+}
+
 /**************************/
 /*  File include collapses.
  */
@@ -2099,6 +2132,10 @@ blockquote .collapse-block.no-abstract.expanded-not > .disclosure-button .part::
 
 .collapse.file-include-collapse > .collapse-content-wrapper {
     padding: 0.5em 0.5em 0.5em 0;
+}
+
+.collapse.file-include-collapse > .disclosure-button > .collapse-iceberg-indicator {
+	display: none;
 }
 
 /***********************************************************/
@@ -2680,18 +2717,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1734701250#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1734701250#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1734701250#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1734701250#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5752,7 +5789,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1734701250#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5938,7 +5975,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1734701250#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6450,7 +6487,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1734701250#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7471,7 +7508,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#question');
+    background-image: url('/static/img/icon/icons.svg?v=1734701250#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7675,7 +7712,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1734701250#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -8201,7 +8238,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1734727221#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1734701250#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -8282,7 +8319,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1734701250#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
