--- a/template/include/annotation-blockquote-not.tmpl
+++ b/template/include/annotation-blockquote-not.tmpl
@@ -5,7 +5,7 @@
 	<p class="data-field title">
 		<a 
 		   class="<{titleLinkClass}>"
-		   title="Open <{titleLinkHref}> in <{whichTab}> <{tabOrWindow}>"
+		   title="Open <<{titleLinkHref}>> in <{whichTab}> <{tabOrWindow}>"
 		   href="<{titleLinkHref}>"
 		   target="<{linkTarget}>"
 		   <{titleLinkDataAttributes}>
