--- a/template/include/pop-frame-title-standard.tmpl
+++ b/template/include/pop-frame-title-standard.tmpl
@@ -1,6 +1,6 @@
 <a
 	class="popframe-title-link"
 	href="<{popFrameTitleLinkHref}>"
-	title="Open <{popFrameTitleLinkHref}> in <{whichTab}> <{tabOrWindow}>."
+	title="Open <<{popFrameTitleLinkHref}>> in <{whichTab}> <{tabOrWindow}>."
 	target="<{linkTarget}>"
 		><{popFrameTitle}></a>
