--- a/template/include/tweet-blockquote-outside.tmpl
+++ b/template/include/tweet-blockquote-outside.tmpl
@@ -2,7 +2,7 @@
 	<p class="data-field tweet-links">
 		<a 
 		   class="<{authorLinkClass}>"
-		   title="Open <{authorLinkHref}> in <{whichTab}> <{tabOrWindow}>"
+		   title="Open <<{authorLinkHref}>> in <{whichTab}> <{tabOrWindow}>"
 		   href="<{authorLinkHref}>"
 		   target="<{linkTarget}>"
 		   <{authorLinkIconMetadata}>
@@ -10,7 +10,7 @@
 		on \
 		<a
 		   class="<{tweetLinkClass}>" 
-		   title="Open <{tweetLinkHref> in <{whichTab}> <{tabOrWindow}>"
+		   title="Open <<{tweetLinkHref>> in <{whichTab}> <{tabOrWindow}>"
 		   href="<{tweetLinkHref}>" 
 		   <{archivedTweetURLDataAttribute}> 
 		   <{tweetLinkIconMetadata}>
