--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -5029,6 +5029,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popframe-body .table-scroll-wrapper {
     max-height: unset;
+    overscroll-behavior: unset;
 }
 
 .popframe-body .marginnote {
