--- a/css/initial.css
+++ b/css/initial.css
@@ -2060,6 +2060,12 @@ span.date-range > sub {
     }
 }
 
+/*	Small caps blocks.
+ */
+.smallcaps > p {
+	font-variant-caps: smallcaps;
+}
+
 /*  Hide date range metadata on /index.
  */
 body.page-index span.date-range sub {
