--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2706,18 +2706,18 @@ ul.interview .speaker {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1737942730#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1737942730#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1737942730#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1737942730#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5798,7 +5798,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1737942730#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5984,7 +5984,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1737942730#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6496,7 +6496,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1737942730#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7508,7 +7508,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#question');
+    background-image: url('/static/img/icon/icons.svg?v=1737942730#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7712,7 +7712,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1737942730#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -8238,7 +8238,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1734727221#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1737942730#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -8319,7 +8319,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734727221#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1737942730#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
@@ -9209,6 +9209,10 @@ a[data-link-icon='deepmind'] {
     --link-icon-offset-x: 0.15em;
     --link-icon-offset-y: 0.20em;
     --link-icon-opacity: 0.7;
+}
+
+a[data-link-icon='deepseek'] {
+    --link-icon-size: 0.8em;
 }
 
 a[data-link-icon='distillpub'] {
