--- a/css/links.css
+++ b/css/links.css
@@ -2,17 +2,17 @@
 /* POP-FRAME INDICATORS */
 /************************/
 
-/*	If a link has an automatic or custom link annotation (eg. a paper abstract,
-	or excerpts), subtly mark it with a dog-ear/tag-like icon, so users don’t
-	get frustrated hovering over links which have no useful annotation (which
-	is an unfortunate number).
+/*  If a link has an automatic or custom link annotation (eg. a paper abstract,
+    or excerpts), subtly mark it with a dog-ear/tag-like icon, so users don’t
+    get frustrated hovering over links which have no useful annotation (which
+    is an unfortunate number).
 
-	At some point, if enough links get annotated & annotation is the default,
-	we might flip this to be a warning for non-annotated links.
+    At some point, if enough links get annotated & annotation is the default,
+    we might flip this to be a warning for non-annotated links.
 
-	We exclude it on the homepage because every linked page has a
-	description/abstract, and the triangles everywhere add a lot of visual
-	clutter.
+    We exclude it on the homepage because every linked page has a
+    description/abstract, and the triangles everywhere add a lot of visual
+    clutter.
  */
 .markdownBody a.has-indicator-hook {
     margin-left: 0.1em;
@@ -70,15 +70,15 @@
 .markdownBody a.has-annotation,
 .markdownBody a.has-annotation-partial {
     background-image: linear-gradient(to right,
-    								  var(--link-underline-gradient-line-color) 50%,
-    								  var(--link-underline-background-color) 50%);
+                                      var(--link-underline-gradient-line-color) 50%,
+                                      var(--link-underline-background-color) 50%);
     background-size: 2px 1px;
 }
 .markdownBody a.has-annotation.decorate-not {
     background-image: none;
 }
 
-/*	Colored (on hover) links.
+/*  Colored (on hover) links.
  */
 a[data-link-icon-color]:hover {
     --link-underline-gradient-line-color: var(--link-icon-color-hover);
@@ -133,7 +133,7 @@ a[data-link-icon-color]:hover {
 /*=================*/
 
 .markdownBody a.has-icon {
-	margin-right: 0.1em;
+    margin-right: 0.1em;
 }
 
 /*******************/
@@ -146,7 +146,7 @@ a[data-link-icon-type='svg'] {
     --link-icon-opacity: 0.55;
 }
 a[data-link-icon-type='svg'] .link-icon-hook::after {
-	--dark-mode-invert-filter: invert(1);
+    --dark-mode-invert-filter: invert(1);
 
     content: "";
     position: relative;
@@ -164,17 +164,17 @@ a[data-link-icon-type='svg']:hover .link-icon-hook::after {
     opacity: calc(var(--link-icon-opacity) * 0.55);
 }
 
-/*	Colored graphical link icons.
+/*  Colored graphical link icons.
  */
 a[data-link-icon-type='svg'][data-link-icon-color]:hover .link-icon-hook::after {
-	--dark-mode-invert-filter: none;
+    --dark-mode-invert-filter: none;
 
     background-image: var(--link-icon-url-hover, var(--link-icon-url));
     opacity: 1.0;
 }
 
 /*  When link colors are reversed relative to the rest of the page (e.g., in
-	some admonition types), a graphical link icon must also be inverted.
+    some admonition types), a graphical link icon must also be inverted.
  */
 .markdownBody .colors-invert a[data-link-icon-type='svg'] .link-icon-hook::after {
     filter: invert(1);
@@ -236,7 +236,7 @@ a[data-link-icon-type*='overline'] {
     --link-icon-text-decoration: overline;
 }
 
-/*	Colored textual link icons.
+/*  Colored textual link icons.
  */
 a[data-link-icon-type*='text'][data-link-icon-color]:hover .link-icon-hook::after {
     color: var(--link-icon-color-hover, currentColor);
@@ -378,8 +378,8 @@ a[data-link-icon='▲'] { /* Melting Asphalt (Kevin Simler) */
 
 a[data-link-icon='▽'] { /* The Verge */
     --link-icon-size: 0.90em;
-	--link-icon-offset-x: 0.10em;
-	--link-icon-offset-y: 0.15em;
+    --link-icon-offset-x: 0.10em;
+    --link-icon-offset-y: 0.15em;
 }
 
 a[data-link-icon='∇'] { /* The Gradient.pub */
@@ -455,8 +455,8 @@ a[data-link-icon='𝔐'] { /* Daily Mail */
 
 a[data-link-icon='𝛌'] { /* Haskell */
     --link-icon-size: 0.85em;
-	--link-icon-offset-x: 0.15em;
-	--link-icon-offset-y: 0.20em;
+    --link-icon-offset-x: 0.15em;
+    --link-icon-offset-y: 0.20em;
 }
 
 a[data-link-icon='𝓝'] { /* Nintil */
@@ -506,26 +506,26 @@ a[data-link-icon='☀'] { /* Low Tech Magazine */
 }
 
 a[data-link-icon='🖋'] { /* NovelAI */
-	--link-icon-size: 0.65em;
-	--link-icon-offset-x: 0.20em;
-	--link-icon-offset-y: 0.35em;
+    --link-icon-size: 0.65em;
+    --link-icon-offset-x: 0.20em;
+    --link-icon-offset-y: 0.35em;
 }
 
 a[data-link-icon='𝕆'] { /* Outside Online */
-	--link-icon-size: 0.85em;
-	--link-icon-offset-x: 0.15em;
-	--link-icon-offset-y: 0.15em;
+    --link-icon-size: 0.85em;
+    --link-icon-offset-x: 0.15em;
+    --link-icon-offset-y: 0.15em;
 }
 
 a[data-link-icon='☯'] { /* Touhou Wiki */
-	--link-icon-size: 0.85em;
-	--link-icon-offset-x: 0.15em;
-	--link-icon-offset-y: 0.20em;
+    --link-icon-size: 0.85em;
+    --link-icon-offset-x: 0.15em;
+    --link-icon-offset-y: 0.20em;
 }
 
 /**************************************************************************/
-/*	Triple-letter ‘tri’ initials: too few for quad, but too big for regular
-	font size/offset. Common with TLA orgs.
+/*  Triple-letter ‘tri’ initials: too few for quad, but too big for regular
+    font size/offset. Common with TLA orgs.
  */
 a[data-link-icon-type*='tri'] {
     --link-icon-size: 0.65em;
@@ -648,10 +648,10 @@ a[data-link-icon='bitcoin'] {
 }
 
 a[data-link-icon='cbs'] {
-	--link-icon-size: 0.70em;
-	--link-icon-offset-x: 0.10em;
-	--link-icon-offset-y: 0.20em;
-	--link-icon-opacity: 0.5;
+    --link-icon-size: 0.70em;
+    --link-icon-offset-x: 0.10em;
+    --link-icon-offset-y: 0.20em;
+    --link-icon-opacity: 0.5;
 }
 
 a[data-link-icon='chi-dna'] {
@@ -780,15 +780,15 @@ a[data-link-icon='laion'] {
 }
 
 a[data-link-icon='maggie-appleton'] {
-	--link-icon-size: 0.70em;
-	--link-icon-offset-x: 0.15em;
-	--link-icon-offset-y: 0.20em;
-	--link-icon-opacity: 0.5;
+    --link-icon-size: 0.70em;
+    --link-icon-offset-x: 0.15em;
+    --link-icon-offset-y: 0.20em;
+    --link-icon-opacity: 0.5;
 }
 
 a[data-link-icon='magnifying-glass'] { /* eye glass for Retraction Watch; cf. .icon-magnifying-glass */
-	--link-icon-size: 0.75em;
-	--link-icon-offset-y: 0.20em;
+    --link-icon-size: 0.75em;
+    --link-icon-offset-y: 0.20em;
     --link-icon-opacity: 0.65;
 }
 
@@ -1027,6 +1027,11 @@ a[data-link-icon='youtube'] {
 
 a[data-link-icon='yud'] {
     --link-icon-offset-y: 0.25em;
+}
+
+a[data-link-icon='deepseek'] {
+    --link-icon-size: 1.05em;
+    --link-icon-offset-x: 0.10em;
 }
 
 /*=------------------=*/
