Further improve /ref/ behavior when ID not found or not annotated

--- a/css/initial.css
+++ b/css/initial.css
@@ -1826,7 +1826,7 @@ May be able at some point to simplify this using regular link underlining, since
  */
 a code {
     border-bottom-width: 0;
-    word-break: normal;
+    word-break: break-all;
     background-color: transparent;
 }
 
