Slight CSS refactor, and layout workaround for CSS bug

--- a/css/head-GENERATED.css
+++ b/css/head-GENERATED.css
@@ -2094,9 +2094,8 @@ p.intro-graf::first-line {
     font-variant-caps: small-caps;
 }
 
-.smallcaps-not > p.intro-graf::first-line,
-.annotation > p.data-field.title.intro-graf::first-line {
-    font-variant-caps: normal;
+.smallcaps-not > p.intro-graf::first-line {
+    font-variant-caps: unset;
 }
 
 /*  Enable standard Pandoc attribute-based syntax for small-caps like
