--- a/css/default.css
+++ b/css/default.css
@@ -3334,6 +3334,10 @@ blockquote .TOC,
     --text-hyphenation: none;
 }
 
+.annotation p.data-field.title.intro-graf::first-line {
+    font-variant-caps: unset;
+}
+
 /*  Title link.
  */
 .annotation .data-field.title .title-link,
